--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php":                       ">=5.3.2",
         "symfony/framework-bundle":  ">=2.0.0",
-        "twig/twig":                 ">=1.9.1,<2.0-dev"
+        "twig/twig":                 ">=1.9.1"
     },
     "replace": {
         "smoya/AssetManagementBundle": "dev-master"
